# zbar_cam

./: CMakeLists.txt  README.md  main.c
include/: config.h
zbar/: CMakeLists.txt  error.h  timer.h
